--- a/templates/patientForm.html
+++ b/templates/patientForm.html
@@ -1,28 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Patient Data Form</title>
-    <style>
-		body {
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			justify-content: center;
-			height: 100vh;
-		}
-        
-	</style>
+  <title>Patient Information Form</title>
 </head>
 <body>
-    <table>
-        {% for key, value in formData.items() %}
-        <tr><select name="key">
-          {% for option in value %}
-            <option value='Select'>{{option}}</option>
+  <h1>Patient Information</h1>
+  <form action="{{ url_for('patientForm') }}" method="post">
+    {% for key, value in formData.items() %}
+      <label for="{{ key }}">{{ key }}:</label>
+      {% if value is iterable %}
+        <select id="{{ key }}" name="{{ key }}">
+          {% for item in value %}
+            <option value="{{ item }}">{{ item }}</option>
           {% endfor %}
-        </select></tr>
-        {% endfor %}
-    </table>
-    <div>{{result}}</div>
+        </select>
+      {% else %}
+        <input type="text" id="{{ key }}" name="{{ key }}" value="{{ value }}">
+      {% endif %}
+      <br><br>
+    {% endfor %}
+    <input type="submit" value="Submit">
+  </form>
 </body>
 </html>
