--- a/templates/home.html
+++ b/templates/home.html
@@ -403,23 +403,31 @@ form.sign-in-form {
           </form>
 
 
-          <form action="" class="sign-up-form">
+          <form action="/register" method="POST" class="sign-up-form">
             <h2 class="title">Sign Up</h2>
             <div class="input-field">
-              <i class="fas fa-user"></i>
-              <input type="text" placeholder="Username" />
+                <i class="fas fa-user"></i>
+                <input type="text" name="institute_name" placeholder="Institute Name" required />
             </div>
             <div class="input-field">
-              <i class="fas fa-envelope"></i>
-              <input type="email" placeholder="Email" />
+                <i class="fas fa-user-md"></i>
+                <input type="text" name="doctor_name" placeholder="Doctor Name" required />
             </div>
             <div class="input-field">
-              <i class="fas fa-lock"></i>
-              <input type="password" placeholder="Password" />
+                <i class="fas fa-envelope"></i>
+                <input type="email" name="email" placeholder="Email" required />
+            </div>
+            <div class="input-field">
+                <i class="fas fa-lock"></i>
+                <input type="password" name="password" placeholder="Password" required />
+            </div>
+            <div class="input-field">
+                <i class="fas fa-lock"></i>
+                <input type="password" name="confirm_password" placeholder="Confirm Password" required />
             </div>
             <input type="submit" value="Sign Up" class="btn solid" />
-
-          </form>
+        </form>
+        
         </div>
       </div>
       <div class="panels-container">
