changed the UI of the application

--- a/templates/home.html
+++ b/templates/home.html
@@ -202,12 +202,12 @@ form.sign-in-form {
 
 .btn.transparent {
   margin: 0;
-  background: none;
-  border: 2px solid #fff;
-  width: 130px;
-  height: 41px;
+  background-color: #3e3f40;
   font-weight: 600;
   font-size: 0.8rem;
+}
+.btn.transparent:hover {
+  background-color: #0e0f0f;
 }
 
 .right-panel .image,
