--- a/templates/table.html
+++ b/templates/table.html
@@ -10,11 +10,25 @@
 			justify-content: center;
 			height: 100vh;
 		}
+        th, td {
+            padding: 10px;
+            text-align: left;
+            border-bottom: 1px solid #494848; 
+        }
+
+        th {
+            background-color: rgb(134, 210, 235);
+        }
         
 	</style>
 </head>
 <body>
     <table>
+        <tr>
+            <th>Symptoms</th>
+            <th>Patient Exhibit</th>
+        </tr>
+        {% for key, value in my_dict.items() %}
         <tr>
             <th>Key</th>
             <th>Value</th>
